test/resolver/fail/resolve_import_not_exported.ms
import { bar } from "foo_lib";
val x := bar;
